# Feature_Space_Computation

./: CMakeLists.txt  boost_iterator.cpp  corresponcences_visualization.cpp  feature_matching_evaluation.cpp  feature_space_computation.cpp  gret_sdp_wrapper_test.cpp  notes.md  registered_point_clouds.ply  utils.hpp
cmake/: _FindCGAL.cmake  _FindOpenGR.cmake  local_vars.cmake
gret-sdp-data/: Armadillo_config.json  Bunny_config.json  small_spiral0.ply  small_spiral1.ply  small_spiral2.ply  small_spiral_config.json  spiral0.ply  spiral1.ply  spiral2.ply  spiral3.ply  spiral4.ply  spiral_config.json
